--- a/scss/_stats.scss
+++ b/scss/_stats.scss
@@ -31,7 +31,7 @@
 
         @media #{$desktop}
         {
-            top: -133px;
+            top: -120px;
         }
     }
     &__cards
